--- a/templates/core/knowledge_base.html
+++ b/templates/core/knowledge_base.html
@@ -4,6 +4,7 @@
 {% block title %}База знаний - Metallurgy Lab{% endblock %}
 
 {% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 <style>
 .knowledge-container {
     margin-top: 80px;
