--- a/templates/flotation/analytics.html
+++ b/templates/flotation/analytics.html
@@ -4,6 +4,7 @@
 {% block title %}Аналитика флотации - Metallurgy Lab{% endblock %}
 
 {% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 <link rel="stylesheet" href="{% static 'css/flotation.css' %}">
 <style>
 .analytics-container {
